# stwfsapy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CITATION.cff  Pipfile  README.md  Readme.md  pipfile  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: basic.yml  ci.yml  extended.yml  main.yml  publish.yml  scorecard.yml  zizmor.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
stwfsapy/: case_handlers.py  expansion.py  frequency_features.py  position_features.py  predictor.py  text_features.py  thesaurus.py  thesaurus_features.py
stwfsapy/automata/: construction.py  conversion.py  dfa.py  heap.py  nfa.py  util.py
stwfsapy/tests/: case_handlers_test.py  common.py  conftest.py  frequency_features_test.py  position_features_test.py  predictor_test.py  text_features_test.py  thesaurus_features_test.py  upper_case_letters.py
stwfsapy/tests/automata/: conftest.py  construction_test.py  conversion_test.py  data.py  dfa_test.py  heap_test.py  integration_test.py  nfa_test.py  search_overlap_regression_test.py  util_test.py
stwfsapy/tests/expansion/: ampersand_expansion_test.py  any_case_from_braces_test.py  base_expansion_test.py  collect_test.py  common.py  expand_abbreviation_with_puntuation_test.py  simple_english_plural_test.py  upper_case_abbreviations_from_braces_test.py
stwfsapy/tests/thesaurus/: common.py  conftest.py  deprecation_filter_test.py  extract_broader_test.py  extract_by_type_uri_test.py  extract_deprecated_test.py  extract_labels_test.py  extract_relation_by_uri_test.py  filter_by_subject_from_set_test.py  filtered_by_prefix_test.py  label_unwraping_test.py  label_unwrapping_test.py  language_filter_test.py  retrieve_concept_labels_test.py  set_filter_test.py
stwfsapy/tests/util/: input_handler_test.py  passthrough_transformer_test.py  set_closure_test.py
stwfsapy/util/: input_handler.py  passthrough_transformer.py  set_closure.py
