[project]
name = "stwfsapy"
version = "0.6.2"
description = "A library for match labels of thesaurus concepts to text and assigning scores to found occurrences."
authors = [{name ="AutoSE", email = "autose@zbw.eu"}]
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies=[
    "scipy~=1.15",
    "scikit-learn>0.24,<2.0",
    "rdflib~=7.1"
]

[project.urls]
homepage = "https://github.com/zbw/stwfsapy"
documentation = "https://stwfsapy-zbw.readthedocs.io"

[dependency-groups]
dev = [
    "pytest~=8.4",
    "pytest-mock~=3.14",
    "black~=25.11",
    "pre-commit~=4.5",
]
ci = [
    "pytest-cov~=6.2",
    "ruff~=0.14",
    "safety~=3.7",
    "bandit~=1.9",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I"
]

[tool.bandit]
skips = ["B403", "B301"]
exclude_dirs = ["stwfsapy/tests"]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

